Twilio setup for 2fa phone verification

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,7 @@ DATABASE=""
 JWT_SECRET=
 SENDGRID_API_KEY=
 CONFIRMATION_TOKEN_EXPIRE_TIME=5
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+TWILIO_VERIFY_SERVICE_SID=
